--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -244,7 +244,7 @@ sp_angle_paren_empty            = ignore   # ignore/add/remove/force
 
 # Add or remove space between '>' and a word as in 'List<byte> m;' or
 # 'template <typename T> static ...'.
-sp_angle_word                   = remove   # ignore/add/remove/force
+sp_angle_word                   = add   # ignore/add/remove/force
 
 # Add or remove space between '>' and '>' in '>>' (template stuff).
 #
